--- a/package.json
+++ b/package.json
@@ -5,14 +5,35 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "tslib": "^2.3.0"
+    "@angular/animations": "17.2.4",
+    "@angular/common": "17.2.4",
+    "@angular/compiler": "17.2.4",
+    "@angular/core": "17.2.4",
+    "@angular/forms": "17.2.4",
+    "@angular/platform-browser": "17.2.4",
+    "@angular/platform-browser-dynamic": "17.2.4",
+    "@angular/router": "17.2.4",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "17.2.3",
+    "@angular-devkit/core": "17.2.3",
+    "@angular-devkit/schematics": "17.2.3",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
+    "@angular/cli": "17.2.3",
+    "@angular/compiler-cli": "17.2.4",
+    "@angular/language-service": "17.2.4",
+    "@nx/angular": "18.0.8",
     "@nx/eslint": "18.0.8",
     "@nx/eslint-plugin": "18.0.8",
     "@nx/jest": "18.0.8",
     "@nx/js": "18.0.8",
     "@nx/workspace": "18.0.8",
+    "@schematics/angular": "17.2.3",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -22,11 +43,18 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jest-preset-angular": "~13.1.4",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "17.3.0",
     "nx": "18.0.8",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
