--- a/libs/shared/posts/data-access/package.json
+++ b/libs/shared/posts/data-access/package.json
@@ -4,7 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^17.1.0",
     "@angular/core": "^17.1.0",
-    "@nexularpress/domain-interfaces": "0.0.1"
+    "@nexularpress/domain-interfaces": "0.0.1",
+    "rxjs": "~7.8.0"
   },
   "dependencies": {},
   "sideEffects": false
