--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nexularpress/categories-data-access": [
+        "libs/shared/categories/data-access/src/index.ts"
+      ],
       "@nexularpress/domain-interfaces": [
         "libs/shared/domain/interfaces/src/index.ts"
       ],
