--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.2.4",
-    "@angular/common": "17.2.4",
-    "@angular/compiler": "17.2.4",
-    "@angular/core": "17.2.4",
-    "@angular/forms": "17.2.4",
-    "@angular/platform-browser": "17.2.4",
-    "@angular/platform-browser-dynamic": "17.2.4",
-    "@angular/router": "17.2.4",
+    "@angular/animations": "17.3.1",
+    "@angular/common": "17.3.1",
+    "@angular/compiler": "17.3.1",
+    "@angular/core": "17.3.1",
+    "@angular/forms": "17.3.1",
+    "@angular/platform-browser": "17.3.1",
+    "@angular/platform-browser-dynamic": "17.3.1",
+    "@angular/router": "17.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.2.3",
-    "@angular-devkit/core": "17.2.3",
-    "@angular-devkit/schematics": "17.2.3",
-    "@angular-eslint/eslint-plugin": "17.2.1",
-    "@angular-eslint/eslint-plugin-template": "17.2.1",
-    "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "17.2.3",
-    "@angular/compiler-cli": "17.2.4",
-    "@angular/language-service": "17.2.4",
-    "@nx/angular": "18.0.8",
-    "@nx/eslint": "18.0.8",
-    "@nx/eslint-plugin": "18.0.8",
-    "@nx/jest": "18.0.8",
-    "@nx/js": "18.0.8",
-    "@nx/workspace": "18.0.8",
-    "@schematics/angular": "17.2.3",
+    "@angular-devkit/build-angular": "17.3.1",
+    "@angular-devkit/core": "17.3.1",
+    "@angular-devkit/schematics": "17.3.1",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "17.3.1",
+    "@angular/compiler-cli": "17.3.1",
+    "@angular/language-service": "17.3.1",
+    "@nx/angular": "18.1.2",
+    "@nx/eslint": "18.1.2",
+    "@nx/eslint-plugin": "18.1.2",
+    "@nx/jest": "18.1.2",
+    "@nx/js": "18.1.2",
+    "@nx/workspace": "18.1.2",
+    "@schematics/angular": "17.3.1",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -44,15 +44,15 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.0",
-    "eslint": "~8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~13.1.4",
+    "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.3.0",
-    "nx": "18.0.8",
+    "nx": "18.1.2",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
@@ -65,3 +65,4 @@
     "includedScripts": []
   }
 }
+
