feat(domain-interfaces) added WP tag interface and query params

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,6 @@ jobs:
           cache: 'yarn'
       - run: yarn install --frozen-lockfile
       - uses: nrwl/nx-set-shas@v4
-
+      - run: git branch --track main origin/main
       - run: yarn nx-cloud record -- nx format:check
       - run: yarn nx affected -t lint test build
