init(taxonomies-data-access) Init of lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,6 +35,9 @@
       ],
       "@nexularpress/tags-data-access": [
         "libs/shared/tags/data-access/src/index.ts"
+      ],
+      "@nexularpress/taxonomies-data-access": [
+        "libs/shared/taxonomies/data-access/src/index.ts"
       ]
     }
   },
