--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "packageManager": "yarn@4.1.1",
   "dependencies": {
     "@angular/animations": "17.3.1",
     "@angular/common": "17.3.1",
