init(themes-data-access): Init of lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -51,6 +51,9 @@
       "@nexularpress/taxonomies-data-access": [
         "libs/shared/taxonomies/data-access/src/index.ts"
       ],
+      "@nexularpress/themes-data-access": [
+        "libs/shared/themes/data-access/src/index.ts"
+      ],
       "@nexularpress/users-data-access": [
         "libs/shared/users/data-access/src/index.ts"
       ]
