init(search-data-access): Init of lib

--- a/nx.json
+++ b/nx.json
@@ -45,6 +45,9 @@
     "@nx/angular:library": {
       "linter": "eslint",
       "unitTestRunner": "jest"
+    },
+    "@nx/angular:component": {
+      "style": "css"
     }
   }
 }
