init(block-types-data-access): Init of lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nexularpress/block-types-data-access": [
+        "libs/shared/block-types/data-access/src/index.ts"
+      ],
       "@nexularpress/categories-data-access": [
         "libs/shared/categories/data-access/src/index.ts"
       ],
