init(blocks-data-access): Init of lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nexu": ["libs/shared/blocks/data-access/src/index.ts"],
       "@nexularpress/block-types-data-access": [
         "libs/shared/block-types/data-access/src/index.ts"
       ],
